--- a/VMSServer/Assets/index.html
+++ b/VMSServer/Assets/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Enviar Mensajes a Pantalla WPF</title>
+    <title>Mensajes VMS</title>
     <link rel="stylesheet" href="styles.css" />
     <style>
         body {
@@ -82,20 +82,24 @@
 </head>
 <body>
     <h1>Enviar Mensajes a Pantalla WPF</h1>
-    <form action="./enviar" method="POST">
-        <textarea name="mensaje" placeholder="Escribe tu mensaje"></textarea>
+    <form id="messageForm" action="./enviar" method="POST">
+        <textarea id="mensajeTextArea"
+                  name="mensaje"
+                  placeholder="Escribe tu mensaje"></textarea>
         <input type="submit" value="Enviar Mensaje" />
     </form>
+
     <script>
-      document
-        .getElementById("messageForm")
-        .addEventListener("submit", function (event) {
-          var mensaje = document.getElementById("mensajeTextArea").value;
-          if (mensaje.length > 300) {
-            event.preventDefault();
-            alert("El mensaje no puede exceder los 300 caracteres.");
-          }
-        });
+        document
+            .getElementById("messageForm")
+            .addEventListener("submit", function (event) {
+                var mensaje = document.getElementById("mensajeTextArea").value;
+
+                if (mensaje.length > 300) {
+                    event.preventDefault();
+                    alert("El mensaje no puede exceder los 300 caracteres.");
+                }
+            });
     </script>
 </body>
 </html>
