--- a/VMSServer/Assets/index.html
+++ b/VMSServer/Assets/index.html
@@ -81,7 +81,7 @@
     </style>
 </head>
 <body>
-    <h1>Enviar Mensajes a Pantalla WPF</h1>
+    <h1>Mensajes VMS</h1>
     <form id="messageForm" action="./enviar" method="POST">
         <textarea id="mensajeTextArea"
                   name="mensaje"
@@ -94,7 +94,6 @@
             .getElementById("messageForm")
             .addEventListener("submit", function (event) {
                 var mensaje = document.getElementById("mensajeTextArea").value;
-
                 if (mensaje.length > 300) {
                     event.preventDefault();
                     alert("El mensaje no puede exceder los 300 caracteres.");
