--- a/VMSServer/Assets/index.html
+++ b/VMSServer/Assets/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mensajes VMS</title>
-    <link rel="stylesheet" href="styles.css" />
+    
     <style>
         body {
             background-color: black;
@@ -82,7 +82,7 @@
 </head>
 <body>
     <h1>Mensajes VMS</h1>
-    <form id="messageForm" action="./enviar" method="POST">
+    <form id="messageForm" action="/mensaje/" method="POST">
         <textarea id="mensajeTextArea"
                   name="mensaje"
                   placeholder="Escribe tu mensaje"></textarea>
